--- a/LibriVox/StoryBoard/HomePage.storyboard
+++ b/LibriVox/StoryBoard/HomePage.storyboard
@@ -550,7 +550,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Download" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8h-ex-T3z">
-                                <rect key="frame" x="130" y="66" width="115.33333333333331" height="33"/>
+                                <rect key="frame" x="16" y="66" width="343" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="bEf-af-xcz"/>
                                 </constraints>
@@ -578,37 +578,36 @@
                                 </constraints>
                             </view>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9We-QG-lOr">
-                                <rect key="frame" x="32" y="493" width="311" height="5"/>
+                                <rect key="frame" x="32" y="480.66666666666669" width="311" height="5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="5" id="Ys6-ix-eaI"/>
                                 </constraints>
                             </progressView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="374 Kb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nf7-Mc-R5F">
-                                <rect key="frame" x="32" y="467.66666666666669" width="58" height="24.666666666666686"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nf7-Mc-R5F">
+                                <rect key="frame" x="32" y="480" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="374 Kb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7oH-Rl-wee">
-                                <rect key="frame" x="285" y="467.66666666666669" width="58" height="24.666666666666686"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7oH-Rl-wee">
+                                <rect key="frame" x="343" y="480" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="downloading...." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gkx-Nx-1bH">
-                                <rect key="frame" x="106.00000000000001" y="509" width="163.33333333333337" height="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Downloading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gkx-Nx-1bH">
+                                <rect key="frame" x="131.33333333333334" y="496.66666666666674" width="112.66666666666666" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="7DU-y5-QV6"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="24"/>
+                                <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fny-Tl-PVb">
-                                <rect key="frame" x="100" y="645" width="175" height="34"/>
+                                <rect key="frame" x="16" y="645" width="343" height="34"/>
                                 <color key="backgroundColor" name="Green Tone"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="175" id="FST-ua-MuI"/>
                                     <constraint firstAttribute="height" constant="34" id="YWQ-1H-xJU"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="16"/>
@@ -630,6 +629,8 @@
                         <viewLayoutGuide key="safeArea" id="c9h-ZJ-lhI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="c9h-ZJ-lhI" firstAttribute="trailing" secondItem="R8h-ex-T3z" secondAttribute="trailing" constant="16" id="7i7-GA-JmA"/>
+                            <constraint firstItem="fny-Tl-PVb" firstAttribute="leading" secondItem="c9h-ZJ-lhI" secondAttribute="leading" constant="16" id="Aa9-oZ-Rxf"/>
                             <constraint firstItem="R8h-ex-T3z" firstAttribute="top" secondItem="c9h-ZJ-lhI" secondAttribute="top" constant="16" id="Bnh-xV-QUv"/>
                             <constraint firstItem="7oH-Rl-wee" firstAttribute="top" secondItem="nf7-Mc-R5F" secondAttribute="top" id="CU8-ds-wx4"/>
                             <constraint firstItem="nf7-Mc-R5F" firstAttribute="centerY" secondItem="8Ar-Kt-6dA" secondAttribute="centerY" constant="74" id="Dgy-ja-3AZ"/>
@@ -637,6 +638,7 @@
                             <constraint firstItem="JDX-p6-FKw" firstAttribute="top" secondItem="R8h-ex-T3z" secondAttribute="bottom" constant="32" id="HLx-DN-iZu"/>
                             <constraint firstItem="R8h-ex-T3z" firstAttribute="centerX" secondItem="8Ar-Kt-6dA" secondAttribute="centerX" id="N90-iL-OhN"/>
                             <constraint firstItem="7oH-Rl-wee" firstAttribute="bottom" secondItem="nf7-Mc-R5F" secondAttribute="bottom" id="UHw-nT-wsv"/>
+                            <constraint firstItem="c9h-ZJ-lhI" firstAttribute="trailing" secondItem="fny-Tl-PVb" secondAttribute="trailing" constant="16" id="ULT-0X-E4e"/>
                             <constraint firstItem="9We-QG-lOr" firstAttribute="top" secondItem="nf7-Mc-R5F" secondAttribute="bottom" constant="0.67000000000000004" id="WUO-vR-hu0"/>
                             <constraint firstItem="Gkx-Nx-1bH" firstAttribute="centerX" secondItem="8Ar-Kt-6dA" secondAttribute="centerX" id="XY0-Rm-jIC"/>
                             <constraint firstItem="c9h-ZJ-lhI" firstAttribute="bottom" secondItem="fny-Tl-PVb" secondAttribute="bottom" constant="99" id="ae0-nz-dOQ"/>
@@ -647,6 +649,7 @@
                             <constraint firstItem="c9h-ZJ-lhI" firstAttribute="trailing" secondItem="9We-QG-lOr" secondAttribute="trailing" constant="32" id="mi8-4T-3Te"/>
                             <constraint firstItem="nf7-Mc-R5F" firstAttribute="leading" secondItem="c9h-ZJ-lhI" secondAttribute="leading" constant="32" id="tEp-W7-SzW"/>
                             <constraint firstItem="9We-QG-lOr" firstAttribute="leading" secondItem="c9h-ZJ-lhI" secondAttribute="leading" constant="32" id="tS7-lh-bkO"/>
+                            <constraint firstItem="R8h-ex-T3z" firstAttribute="leading" secondItem="c9h-ZJ-lhI" secondAttribute="leading" constant="16" id="xOy-SJ-3KX"/>
                         </constraints>
                     </view>
                     <connections>
